--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,6 @@ description: Cayman is a clean, responsive theme for GitHub Pages.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
+repository: github_username/github_username.github.io
+github_url: https://github.com/github_username
+url: https://github_username.github.io
