--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Mochi blog
-description: welcome to my blog! you can see what have I done recently
+title: Cayman theme
+description: Cayman is a clean, responsive theme for GitHub Pages.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
