--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,8 @@
 title: Mochi theme
-description:WELCOME TO MY BLOG
+description: welcome to my blog!
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
-repository: SUPERpowerGT/SUPERpowerGT.github.io
-github_url: https://github.com/SUPERpowerGT
-url: https://SUPERpowerGT.github.io
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme
+repository: github_username/github_username.github.io
+github_url: https://github.com/github_username
+url: https://github_username.github.io
