--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Mochi theme
 description: welcome to my blog!
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
-repository: github_username/github_username.github.io
-github_url: https://github.com/github_username
-url: https://github_username.github.io
+repository: SUPERpowerGT/SUPERpowerGT.github.io
+github_url: https://github.com/SUPERpowerGT
+url: https://SUPERpowerGT.github.io
