--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Mochi theme
-description: welcome to my blog!
+title: UTILITY ROOM
+description: welcome to my Mochi blog!
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
